--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ django-appconf==1.0.4
 django-countries==7.0
 django-crispy-forms==1.10.0
 django-localflavor==3.0.1
+django-phonenumber-field==5.0.0
 django-user-agents==0.4.0
 django-widget-tweaks==1.4.8
 measurement==3.2.0
 mpmath==1.2.1
 oauthlib==3.1.0
-Pillow==8.1.1
+phonenumbers==8.12.20
+Pillow==8.1.2
 PyJWT==2.0.0
 python-stdnum==1.16
 python3-openid==3.2.0
