--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-localflavor==3.0.1
 django-phonenumber-field==5.0.0
 django-user-agents==0.4.0
 django-widget-tweaks==1.4.8
+gunicorn==20.1.0
 measurement==3.2.0
 mpmath==1.2.1
 oauthlib==3.1.0
