--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.3.1
+boto3==1.17.79
+botocore==1.20.79
 cryptography==3.3.2
 dj-database-url==0.5.0
 Django==3.1.8
@@ -8,9 +10,11 @@ django-countries==7.0
 django-crispy-forms==1.10.0
 django-localflavor==3.0.1
 django-phonenumber-field==5.0.0
+django-storages==1.11.1
 django-user-agents==0.4.0
 django-widget-tweaks==1.4.8
 gunicorn==20.1.0
+jmespath==0.10.0
 measurement==3.2.0
 mpmath==1.2.1
 oauthlib==3.1.0
@@ -22,6 +26,7 @@ python-stdnum==1.16
 python3-openid==3.2.0
 pytz==2020.5
 requests-oauthlib==1.3.0
+s3transfer==0.4.2
 shortuuid==1.0.1
 sqlparse==0.4.1
 stripe==2.55.1
